if(CMAKE_OSX_SYSROOT MATCHES iphoneos)
  add_subdirectory(Static)
  add_subdirectory(wasm-DYLD)
else()
  add_subdirectory(Darwin-Kernel)
  add_subdirectory(MacOSX-DYLD)
  add_subdirectory(POSIX-DYLD)
  add_subdirectory(Static)
  add_subdirectory(Hexagon-DYLD)
  add_subdirectory(Windows-DYLD)
  add_subdirectory(wasm-DYLD)
endif()
